Refactor using list of fields